updated WashingMachine, prepared methods implementation, modified the whole class